@@ -60,6 +60,14 @@ extern void _ZdlPvRKSt9nothrow_t (void *, c_nothrow_p) __attribute__((weak));
 extern void *_ZnaXRKSt9nothrow_t (size_t, c_nothrow_p) __attribute__((weak));
 extern void _ZdaPvRKSt9nothrow_t (void *, c_nothrow_p) __attribute__((weak));
 
+#ifdef __osf__ /* Really: !HAVE_WEAKDEF  */
+void *
+_ZnaXRKSt9nothrow_t (size_t, c_nothrow_p)
+{
+  return NULL;
+}
+#endif /* __osf__ */
+
 /* Wrap the delete nothrow symbols for usage with a single argument.
    Perhaps should have a configure type check for this, because the
    std::nothrow_t reference argument is unused (empty class), and most
